--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/subcomponents/ueFormLabel/ueFormLabel.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/subcomponents/ueFormLabel/ueFormLabel.scss
@@ -19,6 +19,14 @@
 
 ue-form-label {
   position: relative;
+
+  .form-horizontal .control-label {
+    text-align: left;
+  }
+}
+
+.form-horizontal ue-form-label .control-label {
+  text-align: left;
 }
 
 .wc-fraga .formly-field:not(:first-child) .wcFormLabel {
