INTYG-5316: justerade så att avståndet mellan checkboxarna för fält 8a är lika långt

--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form8a.html
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form8a.html
@@ -8,7 +8,7 @@
 
         <wc-validation-group field-type="check-group" validations="viewState.getValidationErrors('sysselsattning')">
 
-            <div class="form-group">
+            <div class="form-group form-inline">
                 <label class="control-label"><span message key="fk7263.label.arbetsformaga"></span></label>
 
                 <div class="controls">
