--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcHelpTipsPanelTab/wcHelpTipsPanelTab.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcHelpTipsPanelTab/wcHelpTipsPanelTab.directive.html
@@ -1,11 +1,10 @@
-<div class="tab-content-title-row">Tip och hjälprubrik</div>
+<div class="tab-content-title-row">Tips och hjälprubrik</div>
 
 
 
-<wc-support-panel-scrollable-body>
+<wc-support-panel-scrollable-body dom-id="tips-panel-scrollable-body">
 
-  <div>Här är lite tips och hjälp för detta</div>
-  <p>Här är lite tips och hjälp för detta</p>
-  <p>Här är lite tips och hjälp för detta</p>
+  <div>Här är lite tips och hjälp för {{config.intygContext.type}}.</div>
+  <p>Signerat? {{config.intygContext.isSigned}}</p>
 
 </wc-support-panel-scrollable-body>
