--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/wcArendePanelTab.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/wcArendePanelTab.directive.html
@@ -1,8 +1,8 @@
 <div class="tab-content-title-row">
-  (statistik över kompletteringar/frågor)
+  (statistik över kompletteringar/frågor här?)
 </div>
 
-<wc-support-panel-scrollable-body>
+<wc-support-panel-scrollable-body dom-id="arende-panel-scrollable-body">
 
   <!-- utkast mode (taken from META-INF/resources/webjars/common/webcert/fk/arenden/arendeListUtkast.html)-->
   <div class="row" ng-if="!config.intygContext.isSigned">
@@ -21,7 +21,7 @@
           <!-- error message -->
           <wc-alert-message id="arende-list-load-error"
                             ng-show="viewState.doneLoading && viewState.activeErrorMessageKey" alert-severity="danger">
-            <span message key="common.error.{{viewState.activeErrorMessageKey}}"></span>
+            <span dynamic-label key="common.error.{{viewState.activeErrorMessageKey}}"></span>
           </wc-alert-message>
 
         </div>
@@ -67,7 +67,7 @@
           <!-- error message -->
           <wc-alert-message id="arende-list-load-error"
                             ng-show="viewState.doneLoading && viewState.activeErrorMessageKey" alert-severity="danger">
-            <span message key="common.error.{{viewState.activeErrorMessageKey}}"></span>
+            <span dynamic-label key="common.error.{{viewState.activeErrorMessageKey}}"></span>
           </wc-alert-message>
 
         </div>
