--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcSupportPanelScrollableBody/wcSupportPanelScrollableBody.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcSupportPanelScrollableBody/wcSupportPanelScrollableBody.directive.html
@@ -1,6 +1,8 @@
-  <div class="tab-content-scrollable-body" ng-transclude>
-  </div>
+<div ng-attr-id="{{domId}}" class="tab-content-scrollable-body" ng-transclude></div>
 
-  <div class="bottom-fadeout-gradient">
-    <div></div>
-  </div>
+<!--
+interferes with protractor making buttons scolled into view not clickable, since this div is absolutely positioned slightly above the button..
+<div class="bottom-fadeout-gradient">
+  <div></div>
+  -->
+</div>
