--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/srs/components/wcSrsDiagnoseInfo/wcSrsDiagnoseInfo.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/srs/components/wcSrsDiagnoseInfo/wcSrsDiagnoseInfo.directive.html
@@ -1,5 +1,4 @@
-<div wc-spinner label="srs.srsfordiagnose.load.message" show-spinner="!viewState.doneLoading"
-     show-content="viewState.doneLoading">
+<wc-spinner label="srs.srsfordiagnose.load.message" show-spinner="!viewState.doneLoading">
 
   <h1>Stöd för bedömning vid sjukskrivning</h1>
 
@@ -51,4 +50,4 @@
     <span dynamic-label key="{{viewState.mainMessageKey.key}}"></span>
   </div>
 
-</div>
+</wc-spinner>
