--- a/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/intyg/intyg.html
+++ b/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/intyg/intyg.html
@@ -4,8 +4,7 @@
 <div class="webcert-workarea-hflex-container">
   <div id="certificate-content-container" class="webcert-workarea-intyg container-fluid ts-bas-ns weak-hidden"
        ng-class="{show: viewState.common.showTemplate}">
-    <div wc-spinner label="common.load.certificate" show-spinner="!viewState.common.doneLoading"
-         show-content="viewState.common.doneLoading">
+    <wc-spinner label="common.load.certificate" show-spinner="!viewState.common.doneLoading">
 
 
       <div ng-show="!viewState.common.activeErrorMessageKey">
@@ -21,7 +20,7 @@
         </div>
       </div>
       <!-- entire intyg -->
-    </div>
+    </wc-spinner>
     <!--  spinner end -->
   </div>
 
