--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/wcArendePanelTab.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/wcArendePanelTab.directive.html
@@ -8,8 +8,7 @@
   <div class="row" ng-if="!config.intygContext.isSigned">
     <div class="col-md-12 arende-column">
 
-      <div wc-spinner label="common.loading.existing.arenden" show-spinner="!viewState.doneLoading"
-           show-content="viewState.doneLoading">
+      <wc-spinner label="common.loading.existing.arenden" show-spinner="!viewState.doneLoading">
 
         <div class="webcert-bottom-padding-section" ng-show="viewState.intygProperties.isLoaded">
 
@@ -43,7 +42,7 @@
 
         </div>
 
-      </div>
+      </wc-spinner>
 
     </div>
     <!--  end spinner -->
