--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
@@ -101,6 +101,7 @@
   @import 'utkast/formly/wrapper/wcFraga.scss';
   @import 'utkast/srs/_srs.scss';
   @import 'utkast/srs/components/wcSrsDiagnoseInfo/wcSrsDiagnoseInfo.directive.scss';
+  @import 'utkast/unified-edit/components/ueDiagnos/ueDiagnos.scss';
   @import 'utkast/unified-edit/components/ueFraga/ueFraga.directive.scss';
   @import 'utkast/unified-edit/components/ueKategori/ueKategori.directive.scss';
   @import 'utkast/unified-edit/components/ueText/ueText.directive.scss';
