INTYG-5417: Ny design för valideringsmeddelanden

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueCheckboxDate/ueCheckboxDate.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueCheckboxDate/ueCheckboxDate.directive.html
@@ -1,5 +1,5 @@
 <div ng-class="{'bottom-padding-small': config.paddingBottom}">
-  <wc-validation-wrapper field-type="checkboxdate"
+  <ue-validation-wrapper field-type="checkboxdate"
                          label-col-size="{{::config.labelColSize}}"
                          key="{{::config.modelProp}}"
                          warnings="validation.warningMessagesByField[config.modelProp.toLowerCase()]"
@@ -18,5 +18,5 @@
               dom-id="datepicker_{{::config.modelProp}}" max-date="{{::config.maxDate}}"></span>
       </div>
     </div>
-  </wc-validation-wrapper>
+  </ue-validation-wrapper>
 </div>
