--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueSjukskrivningar/ueSjukskrivningar.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueSjukskrivningar/ueSjukskrivningar.directive.html
@@ -17,7 +17,7 @@
     </div>
   </div>
 
-  <wc-validation-group field-type="sjukskrivningar"
+  <ue-validation-wrapper field-type="sjukskrivningar"
                        validations="validation.messagesByField[config.modelProp]"
                        warnings="validation.warningMessagesByField[config.modelProp]">
 
@@ -60,8 +60,8 @@
         </div>
       </div>
 
-      <wc-field-validation field-type="sjukskrivning_period"
-                           validations="validationsForPeriod[field]"></wc-field-validation>
+      <ue-validation-list field-type="sjukskrivning_period"
+                          validations="validationsForPeriod[field]"></ue-validation-list>
 
       <div class="col-lg-pull-none pull-right fold-animation fold-slide-animation"
            ng-if="field != 'HELT_NEDSATT' && viewstate.periods[field].valid">
@@ -76,9 +76,9 @@
     </div>
 
     <div>
-      <wc-field-validation field-type="sjukskrivning_period" validations="overlapValidations"></wc-field-validation>
+      <ue-validation-list field-type="sjukskrivning_period" validations="overlapValidations"></ue-validation-list>
     </div>
 
-  </wc-validation-group>
+  </ue-validation-wrapper>
 
 </div>
