--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueTextfield/ueTextfield.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueTextfield/ueTextfield.directive.html
@@ -1,5 +1,5 @@
 <div ng-class="{'bottom-padding-small': config.paddingBottom}">
-  <wc-validation-wrapper field-type="textfield"
+  <ue-validation-wrapper field-type="textfield"
                          label-col-size="{{::config.labelColSize}}"
                          key="{{::config.modelProp}}"
                          warnings="validation.warningMessagesByField[config.modelProp.toLowerCase()]"
@@ -17,5 +17,5 @@
                wc-number="{{config.numbersOnly === true}}">
       </div>
     </div>
-  </wc-validation-wrapper>
+  </ue-validation-wrapper>
 </div>
