INTYG-5395: ts-diabetes utkastvyn konverterad till ue

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/date/wcDatePickerField/wcDatePickerField.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/date/wcDatePickerField/wcDatePickerField.directive.html
@@ -6,13 +6,13 @@
            class="form-control"
            ng-class="{'text-invalid': invalid}"
            ng-model="targetModel"
+           ng-model-options="targetModelOptions"
            is-open="pickerState.isOpen"
            maxlength="10"
            uib-datepicker-popup="{{::format}}"
            popup-placement="auto right"
            max-date="{{::maxDate}}"
            min-date="{{::minDate}}"
-           ng-model-options="{ allowInvalid: true }"
            datepicker-options="dateOptions"
            ng-blur="onDatepickerInputFieldBlur()"
            datepicker-template-url="/web/webjars/common/webcert/components/date/wcDatePickerField/datepicker.template.html"
