--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueCheckgroup/ueCheckgroup.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueCheckgroup/ueCheckgroup.directive.html
@@ -7,7 +7,7 @@
     <ue-form-label config="::config.label"></ue-form-label>
     <div data-ng-repeat="choice in ::config.choices">
       <label class="big-checkbox-label checkbox-inline">
-        <input id="{{::config.modelProp}}-{{::choice}}" type="checkbox" class="big-checkbox" ng-model="model[config.modelProp][choice]" ng-change="onChange()">
+        <input ng-attr-id="{{::config.modelProp}}-{{::choice|ueDomIdFilter}}" type="checkbox" class="big-checkbox" ng-model="model[config.modelProp][choice]" ng-change="onChange()">
         <span dynamic-label key="{{::config.code}}.{{::choice}}.RBK"></span>
       </label>
       <div ng-if="::config.enableHelp">
