--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueCheckboxDate/ueCheckboxDate.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueCheckboxDate/ueCheckboxDate.directive.html
@@ -7,7 +7,7 @@
     <div class="form-horizontal row">
       <div class="col-md-6">
         <label class="checkbox-inline big-checkbox-label">
-          <input id="checkbox_{{::config.modelProp}}" type="checkbox" class="big-checkbox" ng-model="checkbox.checked" value="true">
+          <input ng-attr-id="checkbox_{{::config.modelProp|ueDomIdFilter}}" type="checkbox" class="big-checkbox" ng-model="checkbox.checked" value="true">
           <span dynamic-label key="{{::config.label.key}}"></span>
         </label>
         <span wc-help-chevron help-text-key="{{::config.label.helpKey}}"></span>
