--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueRadio/ueRadio.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueRadio/ueRadio.directive.html
@@ -1,11 +1,25 @@
 <div ng-class="::{'form-inline': !config.vertical}">
     <ue-form-label config="::config.label"></ue-form-label>
     <label class="big-radio-label" ng-class="::{'radio': config.vertical, 'radio-inline': !config.vertical, 'disabled': config.disabled}">
-        <input id="{{::config.modelProp}}Yes" name="{{::config.modelProp}}" type="radio" class="big-radio"
-               ng-value="true" ng-model="model[config.modelProp]"/> <span dynamic-label key="{{::config.yesLabel}}" fallback-value="Ja"></span>
+        <input ng-attr-id="{{::config.modelProp|ueDomIdFilter}}Yes"
+               name="{{::config.modelProp}}"
+               type="radio"
+               class="big-radio"
+               ng-value="true"
+               ng-model="modelGetterSetter"
+               ng-model-options="{ getterSetter: true }"
+               ng-change="updateValidation()"/>
+        <span dynamic-label key="{{::config.yesLabel}}" fallback-value="Ja"></span>
     </label>
     <label class="big-radio-label" ng-class="::{'radio': config.vertical, 'radio-inline': !config.vertical, 'disabled': config.disabled}">
-        <input id="{{::config.modelProp}}No" name="{{::config.modelProp}}" type="radio" class="big-radio"
-               ng-value="false" ng-model="model[config.modelProp]"/> <span dynamic-label key="{{::config.noLabel}}" fallback-value="Nej"></span>
+        <input ng-attr-id="{{::config.modelProp|ueDomIdFilter}}No"
+               name="{{::config.modelProp}}"
+               type="radio"
+               class="big-radio"
+               ng-value="false"
+               ng-model="modelGetterSetter"
+               ng-model-options="{ getterSetter: true }"
+               ng-change="updateValidation()"/>
+        <span dynamic-label key="{{::config.noLabel}}" fallback-value="Nej"></span>
     </label>
 </div>
