--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueTextfield/ueTextfield.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueTextfield/ueTextfield.directive.html
@@ -9,9 +9,11 @@
         <ue-form-label config="::config.label"></ue-form-label>
       </div>
       <div ng-class="::{'col-md-{{12 - config.labelColSize}}': config.labelColSize}">
-        <input id="{{::config.modelProp}}" type="text" class="form-control"
-               ng-model="model[config.modelProp]"
-               ng-disabled="::config.disabled"
+        <input ng-attr-id="{{::config.modelProp|ueDomIdFilter}}" type="text" class="form-control"
+               ng-model="modelGetterSetter"
+               ng-model-options="{ debounce: config.numbersOnly ? 0 : 500, getterSetter: true }"
+               ng-blur="updateValidation()"
+               ng-disabled="config.disabled(model)"
                ng-class="::{ 'input-{{config.size}}': config.size }"
                maxlength="{{::config.htmlMaxlength || 3500}}"
                wc-number="{{config.numbersOnly === true}}">
