INTYG-5243: Strukturering av intygheader.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_variables.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_variables.scss
@@ -59,6 +59,7 @@ $wc-color-25: #8AA7F5;
 $wc-color-03: #B3E5FC;
 
 //shadows
+$black_12: rgba(0, 0, 0, 0.12);
 $black_20: rgba(0, 0, 0, 0.2);
 $black_75: rgba(0, 0, 0, 0.75);
 $black_30: rgba(0, 0, 0, 0.3);
