--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/intygHeader.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/intygHeader.scss
@@ -1,5 +1,5 @@
-/*
- * Copyright (C) 2017 Inera AB (http://www.inera.se)
+/*!
+ * Copyright (C) 2018 Inera AB (http://www.inera.se)
  *
  * This file is part of sklintyg (https://github.com/sklintyg).
  *
@@ -17,5 +17,6 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-#wc-intyg-revoked-intyg-message {
+.page-header-divider {
+  border-bottom: 1px solid $wc-color-15;
 }
